--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-ldappool (1.0-2) UNRELEASED; urgency=medium
+
+  * Fixed VCS URLs (https).
+
+ -- Ondřej Nový <novy@ondrej.org>  Sun, 28 Feb 2016 15:41:00 +0100
+
 python-ldappool (1.0-1) unstable; urgency=medium
 
   * Initial release. (Closes: #752753)
