--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 python-ldappool (1.0-2) UNRELEASED; urgency=medium
 
   * Fixed VCS URLs (https).
+  * d/rules: Changed UPSTREAM_GIT protocol to https
 
  -- Ondřej Nový <novy@ondrej.org>  Sun, 28 Feb 2016 15:41:00 +0100
 
