--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+python-ldappool (2.0.0-2) UNRELEASED; urgency=medium
+
+  * d/s/options: extend-diff-ignore of .gitreview
+  * d/control: Using OpenStack's Gerrit as VCS URLs.
+  * Bumped debhelper compat version to 10
+
+ -- Ondřej Nový <onovy@debian.org>  Thu, 24 Nov 2016 00:07:16 +0100
+
 python-ldappool (2.0.0-1) unstable; urgency=medium
 
   [ Ondřej Nový ]
